# pyzdf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
pyzdf/: __init__.py  _zdf.pxd  _zdf.pyi  _zdf.pyx  hello.pyx  zdf.py  zdf.pyi  zdf.pyx
somelib/src/: hello.c
tests/: zdf_test.py
