[tool.poetry]
name = "pyzdf"
version = "0.1.0"
description = "Pythonic interface to the binary ZDF file format."
authors = ["Anton Helm <anton.helm@tecnico.ulisboa.pt>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
