[metadata]
name = pyzdf
version = attr: pyzdf.__version__
description = Python package for working with ZDF files
long_description = file: README.md
long_description_content_type = text/markdown
author = Anton Helm
author_email = anton.helm@tecnico.ulisboa.pt
license = MIT
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Cython
    Topic :: Scientific/Engineering
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Environment :: MacOS X

[options]
zip_safe = False
include_package_data = True
packages =
    pyzdf
setup_requires =
    Cython
install_requires =
python_requires = >=3.6

[options.extras_require]
dev=
    pytest
